@@ -4,6 +4,8 @@ bzr-svn 0.3.3	UNRELEASED
 
   * Don't do extra checkout before push if possible. (#91885)
 
+  * Set parent URLs in svn-import. (#94406)
+
 bzr-svn 0.3.2	2007-03-13
 
   BUG FIXES
